plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'be.brahms'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security:3.5.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.5.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.5.0'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas:3.5.0'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'org.liquibase:liquibase-core:4.32.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.9'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.javadoc {
	options {
		title = "Documentation Javadoc about my rent-serve app"
		links = [
				'link', 'https://docs.spring.io/spring-framework/docs/current/javadoc-api/',
				'link', 'https://docs.oracle.com/en/java/javase/21/docs/api/'
		]
		encoding = 'UTF-8'
		charSet = 'UTF-8'
		destinationDir = reporting.file("javadoc")
		failOnError = false
	}
}
